[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/player/Player.gd" type="Script" id=1]
[ext_resource path="res://characters/player/graphics/playerGrey_walk1.png" type="Texture" id=2]
[ext_resource path="res://characters/player/graphics/playerGrey_walk2.png" type="Texture" id=3]
[ext_resource path="res://characters/player/HealthBar.tscn" type="PackedScene" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12, 15.5 )

[sub_resource type="RectangleShape2D" id=3]

[node name="Player" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1.5 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
__meta__ = {
"_edit_group_": true
}

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = -16.0
margin_top = 18.0
margin_right = 16.0
margin_bottom = 21.0

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="AttackArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 3 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_Timer_timeout"]
